# AI-Agent-Framework

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: logging_config.py  settings.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  planner_agent.py  react_agent.py  reviewer_agent.py  worker_agent.py
src/api/: __init__.py  routes.py
src/graph/: __init__.py  workflow.py
src/memory/: __init__.py  long_term.py  short_term.py
src/tools/: __init__.py  api_call.py  calculator_tool.py  code_interpreter.py  file_tool.py  image_gen.py  search_tool.py  web_scraper.py
src/ui/: __init__.py  streamlit_app.py
src/user/: __init__.py  conversation_store.py  user_manager.py
tests/: test_agents.py  test_memory.py  test_tools.py
